Added a few comments and removed href from <button> which used to be a anchor tag

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <div class="main-content">
         <div class="center">
           <p class="animated-text">Velkommen til min nettside!</p>
-          <button href="#" class="animated-button">Klikk meg</button>
+          <button class="animated-button">Klikk meg</button>
         </div>
+
+        <!-- Images -->
         <div class="image-container">
           <img
             src="./img/raoul-droog-yMSecCHsIBc-unsplash.jpg"
